# ufc-fight-predictor

./: .env.example  .gitignore  README  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/processed/: backtest_results.json  fight_dataset.csv  fight_dataset.parquet
data/raw/: fight_stats.csv  fighters.csv  fights.csv  odds.csv  source_metadata.json
data/raw/cache/: 00d5cf424d3d4d22.html  ufcstats_resume.json
data/raw/imports/: fight_stats.csv  fighters.csv  fights.csv  odds.csv  scorecards.csv
data/sample/: fights.csv
docs/: enrichment.md  fight_enrichment_schema.csv  fight_stats_schema.csv  fighters_schema.csv  fights_schema.csv  import_data.md  kaggle_import.md  odds_schema.csv  scorecards_schema.csv
models/: model_metadata.json  ufc_predictor_model.pkl
src/ufc_predictor/: __init__.py  card_update.py  cli.py  config.py  data_io.py  data_sources.py  database.py  dataset_adapter.py  enrichment.py  fighter_profiles.py  import_validation.py  odds.py  reporting.py  sample_data.py  source_extractors.py
src/ufc_predictor/app/: streamlit_app.py
src/ufc_predictor/features/: __init__.py  build_fight_dataset.py  elo.py  fighter_history.py  leakage_audit.py  style_features.py  trendlines.py  validation.py
tests/: test_advanced_features.py  test_build_dataset_reliability.py  test_cli_data_validation.py  test_dataset_adapter.py  test_enrichment.py  test_feature_generation.py  test_market_aware_features.py  test_model_preprocessing.py  test_no_data_leakage.py  test_post_card_updates.py  test_prediction_output.py  test_ufcstats_ingest_fallbacks.py
(+15 files in other folders)
