[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-fight-predictor"
version = "0.1.0"
description = "Leakage-safe UFC fight outcome prediction engine with calibrated probabilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "UFC Predictor Contributors" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "duckdb>=0.9",
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "streamlit>=1.30",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
explain = ["shap>=0.44"]
dev = ["pytest>=7.4"]

[project.scripts]
ufc-predict = "ufc_predictor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
